# Market-Simulator

./: .gitignore  AGENTS.md  Market Simulator.cmd  README.md  objetivos_market_simulator.md
backend/: MarketSimulator.spec  pyproject.toml
backend/app/: __init__.py  launcher.py  main.py
backend/app/agents/: __init__.py  base.py  registry.py
backend/app/agents/behaviors/: __init__.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: health.py  simulation.py
backend/app/compute/: __init__.py  backend.py  cpu_numpy.py  gpu_cupy.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  events.py  ledger.py  matching.py  order_book.py
backend/app/simulation/: __init__.py  engine.py  live.py  metrics.py  models.py  scheduler.py  shocks.py
backend/app/storage/: __init__.py  event_log.py  sessions.py  snapshots.py
backend/market_simulator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_engine.py  test_health.py
docs/: README.md  agent-system.md  api.md  architecture.md  development.md  gpu-strategy.md  index.md  local-to-web.md  roadmap.md
docs/decisions/: 0001-local-first-web-stack.md  0002-cpu-first-optional-gpu.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MetricCard.tsx  PriceChart.tsx  SectionCard.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/types/: market.ts
scripts/: build-exe.ps1  launch-local.ps1
